<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="28dp"
        android:ems="10"
        android:hint="@string/hint_wt"
        android:inputType="number"
        android:paddingStart="18dp"
        android:paddingEnd="18dp" />

    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="28dp"
        android:ems="10"
        android:hint="@string/hint_FT"
        android:inputType="number"
        android:paddingStart="14dp"/>

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="28dp"
        android:ems="10"
        android:hint="@string/hint_IN"
        android:inputType="number"
        android:paddingStart="14dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:layout_marginTop="22dp"
        android:text="@string/calculate_bmi"
        android:id="@+id/btnCalculate"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_input"
        android:ems="8"
        android:hint="@string/result"
        android:paddingStart="60dp"
        android:paddingVertical="4dp"
        android:textSize="21sp"
        android:textStyle="bold" />


</LinearLayout>
